Adding validations and utilities